k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resumer-api
  namespace: resumer
  labels:
    app.kubernetes.io/name: resumer-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: resumer-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: resumer-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
